# tokenizer

./: README.md  pyproject.toml
scripts/: snapshot_tokenizer.py
src/tokenizer/: __init__.py  ruler.py
tests/: test_ruler.py
