[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenizer"
version = "0.1.0"
description = "Llama 3.1 aligned tokenizer tool"
authors = [
  { name="Eric Xu", email="eric@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers",
    "torch"
]

[project.urls]
"Homepage" = "https://github.com/ericx057/tokenizer"

[tool.setuptools.packages.find]
where = ["src"]
